Fixing navigation design problems, changing header to be always visible on top, change theme for Darkly

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,1 @@
-.container {
-  margin-top: 30px;
-}
 
-.add-client {
-  margin-bottom: 30px;
-}
-
-.list-client {
-  margin-bottom: 50px;
-}
-
-.btn-add-client {
-  margin-right: 10px;
-}
